--- a/aistudio.html
+++ b/aistudio.html
@@ -116,9 +116,26 @@
       <div class="tag tag--ai">Custa <strong>menos</strong> que um atendente, e trabalha 24/7.</div>
     </header>
 
-    <figure class="showcase__frame">
-      <img src="assets/img/print-whitelabel.png" class="showcase__img" alt="CRM e painel de automação">
-    </figure>
+  <figure class="showcase__frame showcase__frame--phone">
+  <div class="showcase__phones">
+    <!-- Print 1 (principal) -->
+    <img
+      src="assets/img/mockup-metricas.png"
+      class="showcase__img showcase__img--main"
+      alt="Painel do AI Studio com métricas e organização do atendimento"
+      loading="lazy"
+    />
+
+    <!-- Print 2 (secundário, some no mobile) -->
+    <img
+      src="assets/img/mockup-login.png"
+      class="showcase__img showcase__img--secondary"
+      alt="Tela de login do AI Studio"
+      loading="lazy"
+    />
+  </div>
+</figure>
+
 
     <div class="showcase__cta">
       <a
