--- a/aistudio.html
+++ b/aistudio.html
@@ -116,8 +116,7 @@
       <div class="tag tag--ai">Custa <strong>menos</strong> que um atendente, e trabalha 24/7.</div>
     </header>
 
- <!-- SUBSTITUA SÓ ESTE TRECHO (sem wrapper extra) -->
-<figure class="showcase__frame">
+<figure class="showcase__frame showcase__frame--clean">
   <img
     src="assets/img/mockup-metricas.png"
     class="showcase__img showcase__img--main"
@@ -132,6 +131,7 @@
     loading="lazy"
   />
 </figure>
+
 
 
 
