Atualizar o story.html

--- a/story.html
+++ b/story.html
@@ -236,7 +236,7 @@ l<!doctype html>
     <section class="showcase">
       <div class="phones">
         <div class="glow"></div>
-
+&nbsp;&nbsp;
         <!-- MOCKUP MÉTRICAS -->
         <img class="phone metrics" src="assets/img/mockup-metricas.png" alt="Métricas">
 
