Atualizar o story.html

--- a/story.html
+++ b/story.html
@@ -234,7 +234,14 @@ l<!doctype html>
 .story .phone.login{
   right: 0 !important;
 }
-    
+    /* =========================================================
+   AJUSTE FINO — mover apenas o conjunto de mockups
+   ========================================================= */
+
+/* container dos dois iPhones */
+.story .phones{
+  transform: translateX(40px); /* 👉 ajuste aqui: 20px / 30px / 40px */
+}
   </style>
 </head>
 
