--- a/aistudio.html
+++ b/aistudio.html
@@ -112,36 +112,28 @@
       <p class="section__subtitle">
         Conversas, status, leads e agendamentos em um só lugar. Você entra só quando o cliente já está pronto.
       </p>
-      <br>
-      <div class="tag tag--ai">Custa <strong>menos</strong> que um atendente, e trabalha 24/7.</div>
+      <div class="badge badge--soft">Custa menos que um atendente, e trabalha 24/7.</div>
     </header>
 
-<figure class="showcase__frame showcase__frame--clean">
-  <img
-    src="assets/img/mockup-metricas.png"
-    class="showcase__img showcase__img--main"
-    alt="Painel do AI Studio com métricas"
-    loading="lazy"
-  />
+    <!-- ✅ SEM CARD: só o palco dos mockups -->
+    <div class="showcase__stage" aria-label="Mockups do AI Studio">
+      <img
+        class="showcase__phone showcase__phone--metrics"
+        src="assets/img/mockup-metricas.png"
+        alt="Painel de métricas"
+        loading="eager"
+      />
 
-  <img
-    src="assets/img/mockup-login.png"
-    class="showcase__img showcase__img--over"
-    alt="Tela de login do AI Studio"
-    loading="lazy"
-  />
-</figure>
-
-
-<br>
+      <img
+        class="showcase__phone showcase__phone--login"
+        src="assets/img/mockup-login.png"
+        alt="Tela de login"
+        loading="eager"
+      />
+    </div>
 
     <div class="showcase__cta">
-      <a
-        href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20CRM%20de%20Atendimento%20com%20IA%20da%20Tullu%20no%20WhatsApp.%20Pode%20me%20mostrar%20como%20funciona%3F"
-        class="btn btn--accent btn--large"
-        target="_blank"
-      >Quero testar gratuitamente</a>
-      <small class="demo__note">Atende até <strong>3.000 leads simultaneamente</strong></small>
+      <a class="btn btn--primary" href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20AI%20Studio.">Quero testar gratuitamente</a>
     </div>
   </div>
 </section>
