--- a/aistudio.html
+++ b/aistudio.html
@@ -107,36 +107,49 @@
 <!-- SHOWCASE (Como funciona) -->
 <section id="showcase" class="showcase">
   <div class="container">
+
     <header class="section__header">
-      <h2 class="section__title">Você ativa, a IA atende, o CRM organiza.</h2>
+      <h2 class="section__title">
+        Você ativa, a IA atende, o CRM organiza.
+      </h2>
+
       <p class="section__subtitle">
-        Conversas, status, leads e agendamentos em um só lugar. Você entra só quando o cliente já está pronto.
+        Conversas, status, leads e agendamentos em um só lugar.
+        Você entra só quando o cliente já está pronto.
       </p>
-      <div class="badge badge--soft">Custa menos que um atendente, e trabalha 24/7.</div>
+
+      <div class="badge badge--soft">
+        Custa menos que um atendente, e trabalha 24/7.
+      </div>
     </header>
 
-    <!-- ✅ SEM CARD: só o palco dos mockups -->
-    <div class="showcase__stage" aria-label="Mockups do AI Studio">
-      <img
-        class="showcase__phone showcase__phone--metrics"
-        src="assets/img/mockup-metricas.png"
-        alt="Painel de métricas"
-        loading="eager"
-      />
+    <!-- 🎯 PALCO ÚNICO DO MOCKUP -->
+    <div class="showcase__visual" aria-label="Mockup do AI Studio">
+      <div class="showcase__glow" aria-hidden="true"></div>
 
-      <img
-        class="showcase__phone showcase__phone--login"
-        src="assets/img/mockup-login.png"
-        alt="Tela de login"
-        loading="eager"
-      />
+      <figure class="showcase__frame">
+        <img
+          class="showcase__img"
+          src="assets/img/cels.png"
+          alt="AI Studio — CRM, métricas e login"
+          loading="eager"
+          decoding="async"
+        />
+      </figure>
     </div>
 
     <div class="showcase__cta">
-      <a class="btn btn--primary" href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20AI%20Studio.">Quero testar gratuitamente</a>
+      <a
+        class="btn btn--primary"
+        href="https://wa.me/5511978217095?text=Quero%20testar%20gratuitamente%20o%20AI%20Studio."
+      >
+        Quero testar gratuitamente
+      </a>
     </div>
+
   </div>
 </section>
+
 
 <!-- COMO FUNCIONA O TESTE GRATUITO (nova seção) -->
 <section class="cta-section" id="teste-gratis">
